# moonglass

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: build.yml  coverage.yml  docs.yml  lint-actions.yml  lint.yml  (+3 more)
moonglass/: Cargo.toml
moonglass-core/: Cargo.toml
moonglass-core/src/: constants.rs  containers.rs  error.rs  fork_choice.rs  glossary.rs  gossip.rs  lib.rs  networking.rs  primitives.rs  ssz.rs  state_transition.rs
moonglass-core/src/constants/: block.rs  builder.rs  chain.rs  domains.rs  fork_choice.rs  rewards.rs  state.rs  time.rs  validator.rs
moonglass-core/src/containers/: attestation.rs  block.rs  builder.rs  chain.rs  data_availability.rs  execution.rs  gossip.rs  state.rs  sync.rs  validator.rs  withdrawal.rs
moonglass-core/src/crypto/: bls.rs  kzg.rs
moonglass-core/src/crypto/kzg/: cells.rs  error.rs  opening.rs  setup.rs  trusted_setup.rs
moonglass-core/src/error/: block.rs  fork_choice.rs  merkle.rs  operation.rs  primitive.rs  registry.rs  signature.rs  slot.rs  transition.rs
moonglass-core/src/fork_choice/: checkpoints.rs  fast_confirmation.rs  filter.rs  head.rs  helpers.rs  on_attestation.rs  on_attester_slashing.rs  on_block.rs  on_execution_payload_envelope.rs  on_payload_attestation_message.rs  on_tick.rs  payload_status.rs  proposer_head.rs  store.rs  timeliness.rs  weight.rs
moonglass-core/src/primitives/: arithmetic.rs  byte_arrays.rs  numeric.rs  numeric_ssz.rs
moonglass-core/src/ssz/: basic.rs  bitfield.rs  codec.rs  collection.rs  container.rs  error.rs  list.rs  merkle.rs  node.rs  traits.rs  vector.rs
moonglass-core/src/state_transition/: balance.rs  block.rs  builder.rs  committee.rs  epoch.rs  genesis.rs  operations.rs  signing.rs  slot.rs  validator.rs  withdrawal.rs
moonglass-core/src/state_transition/block/: parent_payload.rs  sync_aggregate.rs
moonglass-core/src/state_transition/builder/: bids.rs  lifecycle.rs  payload_attestations.rs  payments.rs
moonglass-core/src/state_transition/epoch/: accounting.rs  finality.rs  registry.rs  resets.rs  sync_committees.rs  windows.rs
moonglass-core/src/state_transition/operations/: attestations.rs  deposits.rs  exits.rs  requests.rs  slashings.rs
moonglass-node/: Cargo.toml  README.md
moonglass-node/src/: config.rs  error.rs  genesis.rs  lib.rs
moonglass-node/src/follower/: anchor.rs  clock.rs  codec.rs  dispatch.rs  mod.rs  replay.rs  session.rs  topics.rs
moonglass-node/src/node/: api.rs  discovery.rs  mod.rs  network.rs  reqresp.rs  run.rs
moonglass-node/tests/: follower.rs
moonglass-node/tests/assets/: signed_block.ssz_snappy  signed_block_alt.ssz_snappy
moonglass/src/: constants.rs  containers.rs  crypto.rs  error.rs  fork_choice.rs  lib.rs  primitives.rs  state_transition.rs
moonglass/src/constants/: block.rs  builder.rs  chain.rs  domains.rs  fork_choice.rs  rewards.rs  state.rs  time.rs  validator.rs
moonglass/src/containers/: attestation.rs  block.rs  builder.rs  chain.rs  execution.rs  state.rs  sync.rs  validator.rs  withdrawal.rs
moonglass/src/crypto/: bls.rs  kzg.rs
moonglass/src/crypto/kzg/: error.rs  fk.rs  opening.rs  setup.rs  trusted_setup.rs
moonglass/src/error/: block.rs  fork_choice.rs  incomplete.rs  operation.rs  signature.rs  slot.rs
moonglass/src/fork_choice/: checkpoints.rs  filter.rs  head.rs  helpers.rs  on_attestation.rs  on_attester_slashing.rs  on_block.rs  on_execution_payload_envelope.rs  on_payload_attestation_message.rs  on_tick.rs  payload_status.rs  store.rs  timeliness.rs  weight.rs
moonglass/src/primitives/: arithmetic.rs  byte_arrays.rs  numeric.rs  numeric_ssz.rs
moonglass/src/state_transition/: balance.rs  block.rs  builder.rs  committee.rs  epoch.rs  operations.rs  signing.rs  slot.rs  validator.rs  withdrawal.rs
moonglass/src/state_transition/block/: parent_payload.rs  sync_aggregate.rs
moonglass/src/state_transition/builder/: bids.rs  lifecycle.rs  payload_attestations.rs  payments.rs
moonglass/src/state_transition/epoch/: accounting.rs  finality.rs  registry.rs  resets.rs  sync_committees.rs  windows.rs
moonglass/src/state_transition/operations/: attestations.rs  deposits.rs  exits.rs  requests.rs  slashings.rs
reftests/: Cargo.toml  README.md
reftests/src/: adapters.rs  archive.rs  compare.rs  discover.rs  error.rs  fetch.rs  fixture.rs  hex.rs  inventory.rs  known_failures.rs  lib.rs  main.rs  manifest.rs  report.rs  testing.rs  vectors.rs
reftests/src/adapters/: bls.rs  epoch_processing.rs  fork_choice.rs  mod.rs  operations.rs  sanity.rs  ssz_static.rs  trace_data.rs
reftests/src/adapters/fork_choice/: checks.rs  mod.rs  runner.rs  steps.rs
reftests/src/fixtures/: case.rs  compare.rs  hex.rs
reftests/src/harness/: app.rs  color.rs  report.rs  trace.rs  worker.rs
reftests/src/inventory/: coverage.rs  discover.rs
reftests/src/testing/: assets.rs
reftests/src/vectors/: archive.rs  fetch.rs  manifest.rs  release.rs
reftests/tests/: worker.rs
reftests/tests/assets/: README.md  manifest.json
reftests/tests/assets/consensus-specs-v1.7.0-alpha.10/tests/general/altair/bls/eth_aggregate_pubkeys/bls/eth_aggregate_pubkeys_empty_list/: manifest.yaml
reftests/tests/assets/consensus-specs-v1.7.0-alpha.10/tests/general/altair/bls/eth_aggregate_pubkeys/bls/eth_aggregate_pubkeys_valid_0/: manifest.yaml
reftests/tests/assets/consensus-specs-v1.7.0-alpha.10/tests/general/altair/bls/eth_fast_aggregate_verify/bls/eth_fast_aggregate_verify_valid_0/: manifest.yaml
reftests/tests/assets/consensus-specs-v1.7.0-alpha.10/tests/minimal/gloas/epoch_processing/effective_balance_updates/pyspec_tests/effective_balance_hysteresis/: post.ssz_snappy  pre.ssz_snappy
reftests/tests/assets/consensus-specs-v1.7.0-alpha.10/tests/minimal/gloas/fork_choice/get_head/pyspec_tests/genesis/: anchor_block.ssz_snappy  anchor_state.ssz_snappy  meta.yaml  steps.yaml
reftests/tests/assets/consensus-specs-v1.7.0-alpha.10/tests/minimal/gloas/networking/get_custody_groups/pyspec_tests/get_custody_groups_1/: manifest.yaml  meta.yaml
tests/: Cargo.toml  README.md
(+68 files in other folders)
