[package]
name = "moonglass-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Readable Rust implementation of selected Ethereum consensus paths."
license = "AGPL-3.0-only"
repository = "https://github.com/brech1/moonglass"
documentation = "https://brech1.github.io/moonglass/moonglass_core/"
readme = "../README.md"
keywords = ["ethereum", "consensus"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["mainnet"]
mainnet = []
minimal = []

[dependencies]
sha2 = "0.10"
thiserror = "2"

# Arkworks
ark-bls12-381 = { version = "0.6", default-features = false, features = ["curve"] }
ark-ec = { version = "0.6", default-features = false }
ark-ff = { version = "0.6", default-features = false }
ark-poly = { version = "0.6", default-features = false }
ark-serialize = { version = "0.6", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["minimal"]
rustdoc-args = ["--document-private-items"]
