[package]
name = "moonglass-node"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Devnet wrapper for the moonglass consensus core."
license = "AGPL-3.0-only"
repository = "https://github.com/brech1/moonglass"
documentation = "https://brech1.github.io/moonglass/moonglass_node/"
readme = "README.md"
keywords = ["ethereum", "consensus", "devnet"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["mainnet"]
mainnet = ["moonglass-core/mainnet"]
minimal = ["moonglass-core/minimal"]
follower = ["dep:snap"]
node = [
    "follower",
    "dep:libp2p",
    "dep:discv5",
    "dep:tokio",
    "dep:futures",
    "dep:async-trait",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:axum",
    "dep:serde_json",
]

[dependencies]
moonglass-core = { version = "0.1.0", path = "../moonglass-core", default-features = false }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
snap = { version = "1", optional = true }
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "request-response", "identify", "ping", "secp256k1", "macros"], optional = true }
discv5 = { version = "0.9", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
axum = { version = "0.7", optional = true }
serde_json = { version = "1", optional = true }

[[bin]]
name = "moonglass-node"
path = "src/bin/node.rs"
required-features = ["node"]

[lints]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["minimal"]
rustdoc-args = ["--document-private-items"]
