[package]
name = "moonglass"
version = "0.1.0"
edition = "2024"

[features]
default = ["mainnet"]
mainnet = []
minimal = []

[dependencies]
sha2 = "0.10"
ssz_rs = "0.9"
thiserror = "2"

# Arkworks
ark-bls12-381 = { version = "0.6", default-features = false, features = ["curve"] }
ark-ec = { version = "0.6", default-features = false }
ark-ff = { version = "0.6", default-features = false }
ark-poly = { version = "0.6", default-features = false }
ark-serialize = { version = "0.6", default-features = false }

[lints]
workspace = true
