[package]
name = "reftests"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
default-run = "reftests"
autobins = false
description = "Consensus-spec reference-test runner for Moonglass."
license = "AGPL-3.0-only"
repository = "https://github.com/brech1/moonglass"
readme = "README.md"
keywords = ["ethereum", "consensus", "reference-tests"]
categories = ["development-tools::testing"]
publish = false

[[bin]]
name = "reftests"
path = "src/bin/reftests.rs"
required-features = ["mainnet"]

[[bin]]
name = "reftests-minimal"
path = "src/bin/reftests-minimal.rs"
required-features = ["minimal"]

[features]
default = ["mainnet"]
mainnet = ["moonglass/mainnet"]
minimal = ["moonglass/minimal"]

[dependencies]
moonglass = { version = "0.1.0", path = "../moonglass", default-features = false }
ssz_rs = "0.9"
snap = "1"
flate2 = "1"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
thiserror = "2"
sha2 = "0.10"

# This crate mirrors the workspace lint policy instead of using
# `workspace = true` because Cargo does not let a member inherit the table and
# override one lint locally. The runner intentionally leaves
# `clippy::missing_docs_in_private_items` unset because private reftest plumbing
# is adapter/test infrastructure, not the consensus reading surface.
[lints.rust]
dead_code = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
unused = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo_common_metadata = "deny"
missing_errors_doc = "allow"
